# Performance-Comparison-of-Convolutional-Neural-Networks-Using-PyTorch-and-xtorch-on-Diverse-Datasets

./: .gitignore  readme.md
cpp/: CMakeLists.txt
cpp/src/alexnet/: cifar10.cpp  cifar100.cpp  fashion_mnist.cpp  food101.cpp  imagenette.cpp  mnist.cpp
cpp/src/lenet5/: cifar10.cpp  cifar100.cpp  fashion_mnist.cpp  food101.cpp  imagenette.cpp  mnist.cpp
cpp/src/resnet_18/: cifar10.cpp  cifar100.cpp  fashion_mnist.cpp  food101.cpp  imagenette.cpp  mnist.cpp
cpp/src/vgg_net_16/: cifar10.cpp  cifar100.cpp  fashion_mnist.cpp  food101.cpp  imagenette.cpp  mnist.cpp
python/: 01.ipynb
python/alexnet/: cifar10.ipynb  cifar100.ipynb  fashion_mnist.ipynb  food101.ipynb  imagenette.ipynb  mnist.ipynb
python/lenet5/: cifar10.ipynb  cifar100.ipynb  fashion_mnist.ipynb  food101.ipynb  imagenette.ipynb  mnist.ipynb
python/resnet_18/: cifar10.ipynb  cifar100.ipynb  fashion_mnist.ipynb  food101.ipynb  imagenette.ipynb  mnist.ipynb
python/vgg_net_16/: cifar10.ipynb  cifar100.ipynb  fashion_mnist.ipynb  food101.ipynb  imagenette.ipynb  mnist.ipynb
